// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessDetailsForm renders 1`] = `
<div
  className="layout"
>
  <header>
    
    <h1
      className="au-display-xl"
      styleName="styles.content-heading"
      tabIndex="-1"
    >
      Tell us about your business
    </h1>
  </header>
  <article
    role="main"
  >
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          Don’t write in capitals
        </li>
        <li>
          <b>
            Business name
          </b>
           - The business name you use on the Marketplace must be listed under your ABN. Don’t include a tagline.
        </li>
        <li>
          <b>
            Summary
          </b>
            - describe what your company does.
        </li>
        <li>
          <b>
            Website URL
          </b>
            - start with http, check the link works.
        </li>
        <li>
          <b>
            LinkedIn URL
          </b>
            - Provide a public (ie non logged in) url. You can find the public URL 
          <a
            href="https://www.linkedin.com/help/linkedin/answer/49315/finding-your-linkedin-public-profile-url?lang=en"
          >
            following these instructions
          </a>
          . Direct buyers to a business profile rather than your personal profile.
        </li>
        <li>
          <b>
            Address
          </b>
            - check the spelling and postcode are correct.
        </li>
      </ul>
    </div>
    <form
      id="BusinessDetails__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="name"
        >
          Business name
        </label>
        <p
          className="hint"
          id="name-hint"
        >
          The business name you use on the Marketplace must be listed under your ABN. You can omit suffixes such as PTY or LTD
        </p>
        <input
          className=""
          disabled={true}
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="abn"
        >
          ABN
        </label>
        <input
          className=""
          disabled={false}
          id="abn"
          name="abn"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="summary"
          id="summary-label"
        >
          Summary
        </label>
        <p
          className="hint"
          id="summary-hint"
        >
          3-4 sentences that describe your business. This can be seen by all Digital Marketplace visitors without signing in.
        </p>
        <div>
          <textarea
            aria-describedby="summary-hint"
            className="under-50"
            disabled={true}
            id="summary"
            name="summary"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            50 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="website"
        >
          Website URL
        </label>
        <p
          className="hint"
          id="website-hint"
        >
          Provide a link to your website beginning with http
        </p>
        <input
          className=""
          disabled={true}
          id="website"
          name="website"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="linkedin"
        >
          LinkedIn URL (optional)
        </label>
        <p
          className="hint"
          id="linkedin-hint"
        >
          Provide a LinkedIn URL beginning with http
        </p>
        <input
          className=""
          disabled={true}
          id="linkedin"
          name="linkedin"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="address_line"
        >
          Primary Address
        </label>
        <p
          className="hint"
          id="address_line-hint"
        >
          Principal place of business.
        </p>
        <input
          className=""
          disabled={true}
          id="address_line"
          name="address.address_line"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="suburb"
        >
          Suburb
        </label>
        <input
          className=""
          disabled={true}
          id="suburb"
          name="address.suburb"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="state"
        >
          State
        </label>
        <input
          className=""
          disabled={true}
          id="state"
          name="address.state"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="postal_code"
        >
          Postcode
        </label>
        <input
          className=""
          disabled={true}
          id="postal_code"
          maxLength="4"
          name="address.postal_code"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div />
      <div
        className="row"
      >
        <div />
        <div
          className="col-xs-12 col-sm-12 col-md-9"
        >
          <button
            className="button-width button-width-left"
            disabled="disabled"
          >
            Update profile
          </button>
          <button
            className="save-button button-width button-width-right"
            disabled="disabled"
          >
            Save and finish later
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-12 col-md-3"
        />
      </div>
    </form>
  </article>
</div>
`;

exports[`BusinessDetailsForm renders with form_options 1`] = `
<div
  className="layout"
>
  <header>
    
    <h1
      className="au-display-xl"
      styleName="styles.content-heading"
      tabIndex="-1"
    >
      Tell us about your business
    </h1>
  </header>
  <article
    role="main"
  >
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          Don’t write in capitals
        </li>
        <li>
          <b>
            Business name
          </b>
           - The business name you use on the Marketplace must be listed under your ABN. Don’t include a tagline.
        </li>
        <li>
          <b>
            Summary
          </b>
            - describe what your company does.
        </li>
        <li>
          <b>
            Website URL
          </b>
            - start with http, check the link works.
        </li>
        <li>
          <b>
            LinkedIn URL
          </b>
            - Provide a public (ie non logged in) url. You can find the public URL 
          <a
            href="https://www.linkedin.com/help/linkedin/answer/49315/finding-your-linkedin-public-profile-url?lang=en"
          >
            following these instructions
          </a>
          . Direct buyers to a business profile rather than your personal profile.
        </li>
        <li>
          <b>
            Address
          </b>
            - check the spelling and postcode are correct.
        </li>
      </ul>
    </div>
    <form
      action="/foo/bar"
      id="BusinessDetails__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="name"
        >
          Business name
        </label>
        <p
          className="hint"
          id="name-hint"
        >
          The business name you use on the Marketplace must be listed under your ABN. You can omit suffixes such as PTY or LTD
        </p>
        <input
          className=""
          disabled={true}
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="abn"
        >
          ABN
        </label>
        <input
          className=""
          disabled={false}
          id="abn"
          name="abn"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="summary"
          id="summary-label"
        >
          Summary
        </label>
        <p
          className="hint"
          id="summary-hint"
        >
          3-4 sentences that describe your business. This can be seen by all Digital Marketplace visitors without signing in.
        </p>
        <div>
          <textarea
            aria-describedby="summary-hint"
            className="under-50"
            disabled={true}
            id="summary"
            name="summary"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            50 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="website"
        >
          Website URL
        </label>
        <p
          className="hint"
          id="website-hint"
        >
          Provide a link to your website beginning with http
        </p>
        <input
          className=""
          disabled={true}
          id="website"
          name="website"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="linkedin"
        >
          LinkedIn URL (optional)
        </label>
        <p
          className="hint"
          id="linkedin-hint"
        >
          Provide a LinkedIn URL beginning with http
        </p>
        <input
          className=""
          disabled={true}
          id="linkedin"
          name="linkedin"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="address_line"
        >
          Primary Address
        </label>
        <p
          className="hint"
          id="address_line-hint"
        >
          Principal place of business.
        </p>
        <input
          className=""
          disabled={true}
          id="address_line"
          name="address.address_line"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="suburb"
        >
          Suburb
        </label>
        <input
          className=""
          disabled={true}
          id="suburb"
          name="address.suburb"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="state"
        >
          State
        </label>
        <input
          className=""
          disabled={true}
          id="state"
          name="address.state"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="postal_code"
        >
          Postcode
        </label>
        <input
          className=""
          disabled={true}
          id="postal_code"
          maxLength="4"
          name="address.postal_code"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div />
      <div
        className="row"
      >
        <div />
        <div
          className="col-xs-12 col-sm-12 col-md-9"
        >
          <button
            className="button-width button-width-left"
            disabled="disabled"
          >
            Update profile
          </button>
          <button
            className="save-button button-width button-width-right"
            disabled="disabled"
          >
            Save and finish later
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-12 col-md-3"
        />
      </div>
    </form>
  </article>
</div>
`;
